--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,5 @@
-
-.menu-container {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: space-between;
-}
-.main-nav-link {
-    transition: opacity .2s, visibility .2s;
-    flex: 1 1 auto;
-    align-self: center;
-    display: flex;
-    position: relative;
-}
-.main-nav-link a {
-    font-weight: 500;
-    font-size: 0.66rem;
-    letter-spacing: 0.04rem;
-    color: #03A9F4;
-    padding: 0.75rem 0.5rem;
-    text-transform: uppercase;
-    
-}
-
-.myUl {
-    list-style: none;
-        padding: 0;
-}
-.myUl > li {
-    margin-top: 5px;
+body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
